style: decrease fixed header z-index to 500

--- a/src/layout/css/styles.module.css
+++ b/src/layout/css/styles.module.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1001;
+  z-index: 500;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.05);
 }
 
